[release-line-3.3] Update 2025-10-07.23 (#380)
Reference commit: fac110c24e
