# community/synchronizer/src/main/scala/com/digitalasset/canton/synchronizer/config/PublicServerConfig.scala
@@ -31,6 +31,8 @@ import io.netty.handler.ssl.SslContext
   *     expiration intervals. If disabled, the token expiration interval will be constant.
   * @param overrideMaxRequestSize
   *   overrides the default maximum request size in bytes on the sequencer node
+  * @param stream
+  *   optional stream limit config
   */
 // TODO(i4056): Client authentication over TLS is currently unsupported,
 //  because there is a token based protocol to authenticate clients. This may change in the future.
@@ -45,6 +47,7 @@ final case class PublicServerConfig(
     maxTokenExpirationInterval: NonNegativeFiniteDuration = NonNegativeFiniteDuration.ofHours(1),
     useExponentialRandomTokenExpiration: Boolean = false,
     overrideMaxRequestSize: Option[NonNegativeInt] = None,
+    stream: Option[StreamLimitConfig] = None,
 ) extends ServerConfig
     with UniformCantonConfigValidation {
 
